Added "new post" button to main page. Added navigation via history object (with some hacks). A few tweaks and cleanups.

--- a/client/stylesheets/global.scss
+++ b/client/stylesheets/global.scss
@@ -17,6 +17,20 @@ paper-card {
   margin-top: 12px;
 }
 
+paper-button[raised] {
+  background: $action-color;
+  color: $action-color-text;
+}
+
+paper-button[raised][disabled] {
+  background: $action-color-light;
+}
+
+paper-button[compact] {
+  padding: 8px 10px;
+  font-size: 90%;
+}
+
 // Demo only
 
 .post-image-1 {
