--- a/client/stylesheets/colors.scss
+++ b/client/stylesheets/colors.scss
@@ -9,4 +9,11 @@ $primary-text-color:   #212121;
 $secondary-text-color: #727272;
 $divider-color:        #B6B6B6;
 
+/* Other colors. */
+
+/* Colors for 'call to action' buttons. */
+$action-color:         #1a9378;
+$action-color-light:   #C5E0DA;
+$action-color-text:    #FFFFFF;
+
 $editor-toolbar-color: #dddddd;
