Autocomplete now requests matching channels and users from the server.

--- a/client/stylesheets/postform.scss
+++ b/client/stylesheets/postform.scss
@@ -22,3 +22,7 @@
 
 .post-editor {
 }
+
+paper-input-autocomplete-chips /deep/ paper-material.autocomplete-suggestion-container {
+  max-height: 280px;
+}
