--- a/client/stylesheets/postlist.scss
+++ b/client/stylesheets/postlist.scss
@@ -1,7 +1,7 @@
 @import "colors.scss";
 
-h.post-list-controls {
-  margin: 8px 0;
+.post-list-controls {
+  margin: 14px 0;
 }
 
 .new-post-button, .sign-in-button {
