--- a/client/stylesheets/posts.scss
+++ b/client/stylesheets/posts.scss
@@ -2,6 +2,9 @@
 
 .post-list {
   padding: 4px 8px 4px 8px;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .post-author-avatar {
