Added post age. Added avatar tooltips. Simplified post summary page.

--- a/client/stylesheets/global.scss
+++ b/client/stylesheets/global.scss
@@ -31,6 +31,25 @@ paper-button[compact] {
   font-size: 90%;
 }
 
+// TODO: Figure out why this doesn't work, it should.
+paper-badge {
+  --paper-badge-margin-left: -8px;
+  --paper-badge-margin-bottom: -12px;
+}
+
+.avatar-small {
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-right: 2px;
+}
+
+.avatar-placeholder {
+  background-color: #ccc;
+}
+
 // Demo only
 
 .post-image-1 {
