Added post edit buttons. Added a function that returns whether a user can edit a post. Added better subscriptions and indictes for posts collection.

--- a/client/stylesheets/colors.scss
+++ b/client/stylesheets/colors.scss
@@ -17,3 +17,4 @@ $action-color-light:   #C5E0DA;
 $action-color-text:    #FFFFFF;
 
 $editor-toolbar-color: #dddddd;
+$light-text-color:     #aaaaaa;
