--- a/client/stylesheets/postlist.scss
+++ b/client/stylesheets/postlist.scss
@@ -1,5 +1,12 @@
 @import "colors.scss";
 
+.post-list {
+  padding: 4px 8px 4px 8px;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .post-list-controls {
   margin: 14px 0;
 }
