Implemented 'like' button.

--- a/client/stylesheets/colors.scss
+++ b/client/stylesheets/colors.scss
@@ -18,3 +18,4 @@ $action-color-text:    #FFFFFF;
 
 $editor-toolbar-color: #dddddd;
 $light-text-color:     #aaaaaa;
+$like-button-color:    #ff8888;
