Now can add comments. (But not display them yet).

--- a/client/stylesheets/colors.scss
+++ b/client/stylesheets/colors.scss
@@ -18,4 +18,5 @@ $action-color-text:    #FFFFFF;
 
 $editor-toolbar-color: #dddddd;
 $light-text-color:     #aaaaaa;
+$light-divider-color:  #dddddd;
 $like-button-color:    #ff8888;
