--- a/client/stylesheets/post.scss
+++ b/client/stylesheets/post.scss
@@ -41,7 +41,7 @@
 
 .post-attachments {
   padding: 8px;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid $light-divider-color;
 }
 
 .post-comments {
@@ -59,6 +59,10 @@
   font-size: 16px;
   width: auto;
   margin-left: 16px;
+}
+
+.post-buttons {
+  border-top: 1px solid $light-divider-color;
 }
 
 .post-buttons paper-button,
