--- a/client/stylesheets/post.scss
+++ b/client/stylesheets/post.scss
@@ -26,11 +26,11 @@
 }
 
 .post-visibility {
-  color: #888;
+  color: $light-text-color;
 }
 
 .post-age {
-  color: #888;
+  color: $light-text-color;
   margin-left: 8px;
   font-size: small;
 }
