--- a/client/stylesheets/post.scss
+++ b/client/stylesheets/post.scss
@@ -66,7 +66,8 @@
 }
 
 .post-buttons paper-button,
-.post-buttons paper-icon-button {
+.post-buttons paper-icon-button,
+.comment-info  paper-icon-button {
   color: $light-text-color;
 }
 
